--- a/packages/keyboard-capture/tsconfig.json
+++ b/packages/keyboard-capture/tsconfig.json
@@ -6,5 +6,16 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/**/*"]
+  "include": ["src/*"],
+  "references": [
+    {
+      "path": "../keyboard"
+    },
+    {
+      "path": "../signaling"
+    },
+    {
+      "path": "../widgets"
+    }
+  ]
 }
