--- a/notebooks/package.json
+++ b/notebooks/package.json
@@ -20,6 +20,6 @@
     "@babel/preset-typescript": "^7.7.2",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
-    "typescript": "^3.7.2"
+    "typescript": "~4.7.3"
   }
 }
