--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,23 @@ review/api/temp
 docs/source/changelog.md
 
 # generated api files
-docs/source/api
+packages/algorithm/docs/
+packages/application/docs/
+packages/collections/docs/
+packages/commands/docs/
+packages/coreutils/docs/
+packages/datagrid/docs/
+packages/datastore/docs/
+packages/disposable/docs/
+packages/domutils/docs/
+packages/dragdrop/docs/
+packages/keyboard/docs/
+packages/messaging/docs/
+packages/polling/docs/
+packages/properties/docs/
+packages/signaling/docs/
+packages/virtualdom/docs/
+packages/widgets/docs/
 
 # generated example files
 docs/source/examples
