--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -35,7 +35,7 @@
     "build:src": "tsc --build",
     "build:test": "tsc --build tests && cd tests && webpack",
     "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
-    "docs": "typedoc --options tdoptions.json src",
+    "docs": "typedoc src",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
     "test": "npm run test:firefox-headless",
     "test:chrome": "cd tests && karma start --browsers=Chrome",
