--- a/packages/application/tsconfig.json
+++ b/packages/application/tsconfig.json
@@ -1,18 +1,7 @@
 {
+  "extends": "../../tsconfigbase",
   "compilerOptions": {
-    "composite": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationDir": "./types",
-    "declarationMap": true,
-    "noImplicitAny": true,
-    "noEmitOnError": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "module": "ES6",
-    "moduleResolution": "node",
-    "target": "ES5",
-    "outDir": "lib",
+    "declarationDir": "types",
     "lib": [
       "ES5",
       "ES2015.Collection",
@@ -20,8 +9,7 @@
       "ES2015.Iterable",
       "DOM"
     ],
-    "importHelpers": true,
-    "types": [],
+    "outDir": "lib",
     "rootDir": "src"
   },
   "include": ["src/*"],
