--- a/packages/virtualdom/tsconfig.json
+++ b/packages/virtualdom/tsconfig.json
@@ -1,21 +1,9 @@
 {
+  "extends": "../../tsconfigbase",
   "compilerOptions": {
-    "composite": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationDir": "./types",
-    "declarationMap": true,
-    "noImplicitAny": true,
-    "noEmitOnError": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "module": "ES6",
-    "moduleResolution": "node",
-    "target": "ES5",
-    "outDir": "lib",
+    "declarationDir": "types",
     "lib": ["ES5", "ES2015.Collection", "DOM"],
-    "importHelpers": true,
-    "types": [],
+    "outDir": "lib",
     "rootDir": "src"
   },
   "include": ["src/*"],
