--- a/examples/example-accordionpanel/package.json
+++ b/examples/example-accordionpanel/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "@lumino/default-theme": "^0.22.2",
     "@lumino/messaging": "^1.10.1",
-    "@lumino/widgets": "^1.33.0",
-    "es6-promise": "^4.0.5"
+    "@lumino/widgets": "^1.33.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
