--- a/examples/example-dockpanel/package.json
+++ b/examples/example-dockpanel/package.json
@@ -11,8 +11,7 @@
     "@lumino/default-theme": "^0.22.2",
     "@lumino/dragdrop": "^1.14.0",
     "@lumino/messaging": "^1.10.1",
-    "@lumino/widgets": "^1.33.0",
-    "es6-promise": "^4.0.5"
+    "@lumino/widgets": "^1.33.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
