--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -32,7 +32,7 @@
     "build": "npm run build:src && rollup -c",
     "build:src": "tsc --build",
     "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
-    "docs": "typedoc src",
+    "docs": "typedoc --options ../../typedoc.js src",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
     "watch": "tsc --build --watch"
   },
