Update my name and email

--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -13,7 +13,7 @@
   "license": "BSD-3-Clause",
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
   "contributors": [
-    "A. Darian <git@darian.af>",
+    "A. T. Darian <git@darian.email>",
     "S. Chris Colbert <sccolbert@gmail.com>",
     "Steven Silvester <steven.silvester@gmail.com>"
   ],
