--- a/package.json
+++ b/package.json
@@ -40,20 +40,18 @@
     "update:dependency": "update-dependency --lerna",
     "update:versions": "lerna version --no-push --no-git-tag-version"
   },
-  "dependencies": {},
   "devDependencies": {
     "@jupyterlab/buildutils": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "~4.8.1",
-    "@typescript-eslint/parser": "~4.8.1",
-    "eslint": "~7.14.0",
-    "eslint-config-prettier": "~6.15.0",
-    "eslint-plugin-prettier": "~3.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
     "husky": "^4.2.5",
     "lerna": "^4.0.0",
     "lint-staged": "^10.2.13",
-    "prettier": "~2.1.1",
+    "prettier": "^2.7.1",
     "shell-quote": "^1.7.2",
-    "typedoc": "~0.23.9"
+    "typedoc": "~0.23.9",
+    "typescript": "~4.7.3"
   },
   "jupyter-releaser": {
     "skip": [
