--- a/packages/commands/tsconfig.json
+++ b/packages/commands/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "declarationDir": "types",
-    "lib": ["ES5", "ES2015.Promise", "ES2015.Iterable", "DOM"],
+    "lib": ["DOM", "ES6"],
     "outDir": "lib",
     "rootDir": "src"
   },
