--- a/packages/messaging/tsconfig.json
+++ b/packages/messaging/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "declarationDir": "types",
-    "lib": ["ES5", "ES2015.Collection", "DOM"],
+    "lib": ["DOM", "ES6"],
     "outDir": "lib",
     "rootDir": "src",
     "types": ["@types/node"]
