--- a/packages/signaling/package.json
+++ b/packages/signaling/package.json
@@ -52,6 +52,7 @@
     "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
+    "@types/node": "^12.12.17",
     "chai": "^4.3.4",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
@@ -66,7 +67,7 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "terser": "^5.7.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.0",
     "typedoc": "~0.23.9",
     "typescript": "~4.7.3",
     "webpack": "^4.41.3",
