--- a/packages/signaling/tsconfig.json
+++ b/packages/signaling/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "declarationDir": "types",
-    "lib": ["ES5", "ES2015.Collection", "DOM"],
+    "lib": ["DOM", "ES6"],
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "types": ["@types/node"]
   },
   "include": ["src/*"],
   "references": [
