--- a/packages/widgets/tsconfig.json
+++ b/packages/widgets/tsconfig.json
@@ -2,13 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "declarationDir": "types",
-    "lib": [
-      "ES5",
-      "ES2015.Collection",
-      "ES2015.Promise",
-      "ES2015.Iterable",
-      "DOM"
-    ],
+    "lib": ["DOM", "ES6"],
     "outDir": "lib",
     "rootDir": "src"
   },
