--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -63,16 +63,17 @@
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.56.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup": "^2.77.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "postcss": "^8.4.14",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
     "typedoc": "~0.23.9",
     "typescript": "~4.7.3",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "publishConfig": {
     "access": "public"
