--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
+    "eslint-plugin-prettier": "^4.2.0",
     "husky": "^4.2.5",
     "lerna": "^5.3.0",
     "lint-staged": "^10.2.13",
