--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [main]
+    branches: ['1.x']
   pull_request:
-    branches: [main]
+    branches: ['1.x']
 
 jobs:
   test:
