Update NPM package author to Project Jupyter

--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -11,13 +11,7 @@
     "url": "https://github.com/jupyterlab/lumino.git"
   },
   "license": "BSD-3-Clause",
-  "author": "S. Chris Colbert <sccolbert@gmail.com>",
-  "contributors": [
-    "A. T. Darian <git@darian.email>",
-    "Dave Willmer <dave.willmer@gmail.com>",
-    "S. Chris Colbert <sccolbert@gmail.com>",
-    "Steven Silvester <steven.silvester@gmail.com>"
-  ],
+  "author": "Project Jupyter",
   "main": "dist/index.node.js",
   "browser": "dist/index.js",
   "jsdelivr": "dist/index.min.js",
