Update widgets to use native iterators

--- a/packages/widgets/tsconfig.json
+++ b/packages/widgets/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "declarationDir": "types",
-    "lib": ["DOM", "ES6"],
+    "lib": ["DOM", "DOM.Iterable", "ES6"],
     "outDir": "lib",
     "rootDir": "src"
   },
