--- a/packages/algorithm/package.json
+++ b/packages/algorithm/package.json
@@ -26,9 +26,9 @@
     "api": "api-extractor run --local --verbose",
     "build": "npm run build:src && rollup -c",
     "build:src": "tsc --build",
-    "build:test": "tsc --build tests && cd tests && webpack",
+    "build:test": "npm run clean:test && tsc --build tests && cd tests && rollup -c",
     "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
-    "clean:test": "rimraf tests/build",
+    "clean:test": "rimraf tests/lib && rimraf tests/tsconfig.tsbuildinfo",
     "docs": "typedoc --options ../../typedoc.js src",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
     "test": "npm run test:firefox-headless",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/mocha": "^2.2.39",
     "chai": "^4.3.4",
@@ -59,9 +60,7 @@
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
     "typedoc": "~0.23.9",
-    "typescript": "~4.7.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "typescript": "~4.7.3"
   },
   "publishConfig": {
     "access": "public"
