Use Rollup with example-accordionpanel

--- a/examples/example-accordionpanel/tsconfig.json
+++ b/examples/example-accordionpanel/tsconfig.json
@@ -6,7 +6,7 @@
     "noUnusedLocals": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "target": "ES6",
     "outDir": "./build",
