--- a/examples/example-dockpanel/tsconfig.json
+++ b/examples/example-dockpanel/tsconfig.json
@@ -8,9 +8,9 @@
     "sourceMap": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "ES6",
     "outDir": "./build",
-    "lib": ["ES5", "ES2015.Promise", "ES2015.Iterable", "DOM"],
+    "lib": ["ES6", "DOM"],
     "types": []
   },
   "include": ["src/*"]
