--- a/examples/example-accordionpanel/package.json
+++ b/examples/example-accordionpanel/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@lumino/example-accordionpanel",
-  "version": "0.8.2",
+  "version": "0.9.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "tsc && webpack",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/default-theme": "^0.22.2",
-    "@lumino/messaging": "^1.10.1",
-    "@lumino/widgets": "^1.33.0"
+    "@lumino/default-theme": "^1.0.0-alpha.0",
+    "@lumino/messaging": "^2.0.0-alpha.0",
+    "@lumino/widgets": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
