--- a/examples/example-datagrid/package.json
+++ b/examples/example-datagrid/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@lumino/example-datagrid",
-  "version": "0.32.2",
+  "version": "0.33.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "tsc && webpack",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/datagrid": "^0.36.2",
-    "@lumino/default-theme": "^0.22.2",
-    "@lumino/dragdrop": "^1.14.0",
-    "@lumino/widgets": "^1.33.0"
+    "@lumino/datagrid": "^1.0.0-alpha.0",
+    "@lumino/default-theme": "^1.0.0-alpha.0",
+    "@lumino/dragdrop": "^2.0.0-alpha.0",
+    "@lumino/widgets": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
