--- a/examples/example-dockpanel-iife/package.json
+++ b/examples/example-dockpanel-iife/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/example-dockpanel-iife",
-  "version": "0.4.0",
+  "version": "0.5.0-alpha.0",
   "private": true,
   "scripts": {
     "test": "node ./test/runner.js"
