--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/application",
-  "version": "1.29.2",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Pluggable Application",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,9 +43,9 @@
     "displayName": "application"
   },
   "dependencies": {
-    "@lumino/commands": "^1.20.0",
-    "@lumino/coreutils": "^1.12.0",
-    "@lumino/widgets": "^1.33.0"
+    "@lumino/commands": "^2.0.0-alpha.0",
+    "@lumino/coreutils": "^2.0.0-alpha.0",
+    "@lumino/widgets": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
