--- a/packages/commands/package.json
+++ b/packages/commands/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/commands",
-  "version": "1.20.0",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Commands",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -50,13 +50,13 @@
     "displayName": "commands"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.9.1",
-    "@lumino/coreutils": "^1.12.0",
-    "@lumino/disposable": "^1.10.1",
-    "@lumino/domutils": "^1.8.1",
-    "@lumino/keyboard": "^1.8.1",
-    "@lumino/signaling": "^1.10.1",
-    "@lumino/virtualdom": "^1.14.1"
+    "@lumino/algorithm": "^2.0.0-alpha.0",
+    "@lumino/coreutils": "^2.0.0-alpha.0",
+    "@lumino/disposable": "^2.0.0-alpha.0",
+    "@lumino/domutils": "^2.0.0-alpha.0",
+    "@lumino/keyboard": "^2.0.0-alpha.0",
+    "@lumino/signaling": "^2.0.0-alpha.0",
+    "@lumino/virtualdom": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
