--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/coreutils",
-  "version": "1.12.0",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Core Utilities",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
