--- a/packages/disposable/package.json
+++ b/packages/disposable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/disposable",
-  "version": "1.10.1",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Disposable",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,7 +43,7 @@
     "displayName": "disposable"
   },
   "dependencies": {
-    "@lumino/signaling": "^1.10.1"
+    "@lumino/signaling": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
