--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/dragdrop",
-  "version": "1.14.0",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Drag and Drop",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -46,8 +46,8 @@
     "displayName": "dragdrop"
   },
   "dependencies": {
-    "@lumino/coreutils": "^1.12.0",
-    "@lumino/disposable": "^1.10.1"
+    "@lumino/coreutils": "^2.0.0-alpha.0",
+    "@lumino/disposable": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
