--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/messaging",
-  "version": "1.10.1",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Message Passing",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,8 +43,8 @@
     "displayName": "messaging"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.9.1",
-    "@lumino/collections": "^1.9.1"
+    "@lumino/algorithm": "^2.0.0-alpha.0",
+    "@lumino/collections": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
