--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/polling",
-  "version": "1.11.0",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Polling",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,9 +43,9 @@
     "displayName": "polling"
   },
   "dependencies": {
-    "@lumino/coreutils": "^1.12.0",
-    "@lumino/disposable": "^1.10.1",
-    "@lumino/signaling": "^1.10.1"
+    "@lumino/coreutils": "^2.0.0-alpha.0",
+    "@lumino/disposable": "^2.0.0-alpha.0",
+    "@lumino/signaling": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
