--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/widgets",
-  "version": "1.33.0",
+  "version": "2.0.0-alpha.0",
   "description": "Lumino Widgets",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -53,17 +53,17 @@
     "displayName": "widgets"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.9.1",
-    "@lumino/commands": "^1.20.0",
-    "@lumino/coreutils": "^1.12.0",
-    "@lumino/disposable": "^1.10.1",
-    "@lumino/domutils": "^1.8.1",
-    "@lumino/dragdrop": "^1.14.0",
-    "@lumino/keyboard": "^1.8.1",
-    "@lumino/messaging": "^1.10.1",
-    "@lumino/properties": "^1.8.1",
-    "@lumino/signaling": "^1.10.1",
-    "@lumino/virtualdom": "^1.14.1"
+    "@lumino/algorithm": "^2.0.0-alpha.0",
+    "@lumino/commands": "^2.0.0-alpha.0",
+    "@lumino/coreutils": "^2.0.0-alpha.0",
+    "@lumino/disposable": "^2.0.0-alpha.0",
+    "@lumino/domutils": "^2.0.0-alpha.0",
+    "@lumino/dragdrop": "^2.0.0-alpha.0",
+    "@lumino/keyboard": "^2.0.0-alpha.0",
+    "@lumino/messaging": "^2.0.0-alpha.0",
+    "@lumino/properties": "^2.0.0-alpha.0",
+    "@lumino/signaling": "^2.0.0-alpha.0",
+    "@lumino/virtualdom": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
