Fix license header following 231f01c
The file was commit directly hence the error did not show up

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -23,6 +23,7 @@ header:
     - '**/.*'
     - 'binder/postBuild'
     - 'binder/start'
+    - 'CNAME'
     - 'typedoc-theme'
     - 'LICENSE'
     - 'yarn.lock'
