--- a/.github/workflows/license-header.yml
+++ b/.github/workflows/license-header.yml
@@ -29,23 +29,29 @@ jobs:
         with:
           mode: fix
 
-      - name: Get modified files in the staging directory
-        id: changed-files
-        uses: tj-actions/changed-files@v29.0.2
-
       - name: Apply Changes
-        if: steps.changed-files.outputs.any_changed == 'true'
         shell: bash -l {0}
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add *
-          git commit -m "Automatic application of license header"
+          git commit --allow-empty -m "Automatic application of license header"
+
+      - name: Get modified files in the staging directory
+        id: changed-files
+        uses: tj-actions/changed-files@v29.0.2
+        with:
+          base_sha: 'HEAD~1'
+          sha: 'HEAD'
 
       - name: Push fixes
         if: steps.changed-files.outputs.any_changed == 'true'
         shell: bash -l {0}
         run: |
+          echo "Changed files:"
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "  $file"
+          done
           git config push.default upstream
           git push
         env:
