--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -46,6 +46,7 @@
     "@lumino/widgets": "^2.0.0-alpha.3"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
