--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -86,6 +86,7 @@
     "rollup": "^2.77.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-styles": "^4.0.0",
     "style-loader": "^1.0.2",
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
