--- a/examples/example-accordionpanel/package.json
+++ b/examples/example-accordionpanel/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0-alpha.4",
   "private": true,
   "scripts": {
-    "build": "tsc && webpack",
+    "build": "tsc && rollup -c",
     "clean": "rimraf build"
   },
   "dependencies": {
@@ -12,13 +12,10 @@
     "@lumino/widgets": "^2.0.0-alpha.4"
   },
   "devDependencies": {
-    "css-loader": "^3.4.0",
-    "file-loader": "^5.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "rimraf": "^3.0.2",
-    "source-map-loader": "0.2.4",
-    "style-loader": "^1.0.2",
-    "typescript": "~4.7.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "rollup": "^2.77.3",
+    "rollup-plugin-styles": "^4.0.0",
+    "typescript": "~4.7.3"
   }
 }
