--- a/examples/example-datagrid/tsconfig.json
+++ b/examples/example-datagrid/tsconfig.json
@@ -5,7 +5,8 @@
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "module": "commonjs",
+    "sourceMap": true,
+    "module": "ES6",
     "moduleResolution": "node",
     "target": "ES2018",
     "outDir": "./build",
