--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -46,10 +46,11 @@
     "@lumino/widgets": "^2.0.0-alpha.4"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
-    "rollup": "^2.77.2",
+    "rollup": "^2.77.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "terser": "^5.7.1",
