--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -76,9 +76,9 @@
     "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.1",
-    "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-webkit-launcher": "^1.0.2",
     "mocha": "^9.0.3",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
