--- a/packages/virtualdom/package.json
+++ b/packages/virtualdom/package.json
@@ -42,6 +42,7 @@
     "test:firefox": "npm run test:nobrowser -- --browsers=Firefox",
     "test:firefox-headless": "npm run test:nobrowser -- --browsers=FirefoxHeadless",
     "test:webkit": "cd tests && karma start --browsers=Webkit",
+    "test:webkit-headless": "cd tests && karma start --browsers=WebkitHeadless",
     "test:nobrowser": "cd tests && karma start",
     "watch": "tsc --build --watch"
   },
