--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -44,8 +44,7 @@
   },
   "dependencies": {
     "@lumino/algorithm": "^2.0.0-alpha.6",
-    "@lumino/collections": "^2.0.0-alpha.6",
-    "@lumino/coreutils": "^2.0.0-alpha.6"
+    "@lumino/collections": "^2.0.0-alpha.6"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
