Backport PR #443: Add blocking signal feature

--- a/packages/signaling/package.json
+++ b/packages/signaling/package.json
@@ -46,7 +46,8 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.9.2"
+    "@lumino/algorithm": "^1.9.2",
+    "@lumino/properties": "^1.8.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
