Fix check release step

--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
         "yarn build:dist",
         "node scripts/format-changelog.js"
       ],
-      "before-build-npm": "yarn build:dist",
+      "before-build-npm": [
+        "yarn",
+        "yarn build:dist"
+      ],
       "before-draft-release": "node scripts/tag-versions.js"
     }
   },
