--- a/examples/example-menubar/package.json
+++ b/examples/example-menubar/package.json
@@ -1,21 +1,25 @@
 {
   "name": "@lumino/example-menubar",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-alpha.0",
   "private": true,
   "scripts": {
-    "build": "tsc && rollup -c",
+    "build": "tsc && webpack",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/default-theme": "^1.0.0-alpha.6",
-    "@lumino/messaging": "^2.0.0-alpha.6",
-    "@lumino/widgets": "^2.0.0-alpha.6"
+    "@lumino/default-theme": "^0.22.5",
+    "@lumino/messaging": "^1.10.3",
+    "@lumino/widgets": "^1.35.0",
+    "es6-promise": "^4.0.5"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.3.0",
+    "css-loader": "^3.4.0",
+    "file-loader": "^5.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.77.3",
-    "rollup-plugin-styles": "^4.0.0",
-    "typescript": "~4.7.3"
+    "source-map-loader": "0.2.4",
+    "style-loader": "^1.0.2",
+    "typescript": "~3.6.0",
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
   }
 }
