Upgrade to rollup v3

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "workspaces": [
     "examples/*",
     "packages/*",
-    "tests/*"
+    "buildutils"
   ],
   "scripts": {
     "api": "lerna run api",
     "build": "npm run build:src",
     "build:dist": "npm run build && npm run minimize",
     "build:examples": "lerna run build --scope \"@lumino/example-*\" --concurrency 1",
-    "build:src": "lerna run build --scope \"@lumino/!(test-|example-)*\"  --concurrency 1",
+    "build:src": "lerna run build --scope \"@lumino/!(test-|example-)*\" --concurrency 1",
     "build:test": "lerna run build:test",
-    "watch:src": "lerna run watch --scope \"@lumino/!(test-|example-)*\"  --parallel",
+    "watch:src": "lerna run watch --scope \"@lumino/!(test-|example-)*\" --parallel",
     "clean": "lerna run clean",
     "clean:examples": "lerna run clean --scope \"@lumino/example-*\"",
     "clean:src": "lerna run clean --scope \"@lumino/!(test-|example-)*\"",
