Fix license header check

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -21,6 +21,7 @@ header:
     - '*.map.js'
     - '*.bundle.js'
     - '**/.*'
+    - '.husky/pre-commit'
     - 'binder/postBuild'
     - 'binder/start'
     - 'CNAME'
