--- a/examples/example-accordionpanel/package.json
+++ b/examples/example-accordionpanel/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@lumino/example-accordionpanel",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "private": true,
   "scripts": {
     "build": "tsc && rollup -c",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/default-theme": "^2.0.0-alpha.7",
-    "@lumino/messaging": "^2.0.0-alpha.7",
-    "@lumino/widgets": "^2.0.0-alpha.7"
+    "@lumino/default-theme": "^2.0.0-beta.0",
+    "@lumino/messaging": "^2.0.0-beta.0",
+    "@lumino/widgets": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
