--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumino-top-level",
-  "version": "2023.1.3-alpha.7",
+  "version": "2023.1.3-beta.0",
   "private": true,
   "workspaces": [
     "examples/*",
