--- a/packages/algorithm/package.json
+++ b/packages/algorithm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/algorithm",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Algorithms and Iterators",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
