--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datagrid",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Tabular Data Grid",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -35,15 +35,15 @@
     "displayName": "datagrid"
   },
   "dependencies": {
-    "@lumino/algorithm": "^2.0.0-alpha.7",
-    "@lumino/coreutils": "^2.0.0-alpha.7",
-    "@lumino/disposable": "^2.0.0-alpha.7",
-    "@lumino/domutils": "^2.0.0-alpha.7",
-    "@lumino/dragdrop": "^2.0.0-alpha.7",
-    "@lumino/keyboard": "^2.0.0-alpha.7",
-    "@lumino/messaging": "^2.0.0-alpha.7",
-    "@lumino/signaling": "^2.0.0-alpha.7",
-    "@lumino/widgets": "^2.0.0-alpha.7"
+    "@lumino/algorithm": "^2.0.0-beta.0",
+    "@lumino/coreutils": "^2.0.0-beta.0",
+    "@lumino/disposable": "^2.0.0-beta.0",
+    "@lumino/domutils": "^2.0.0-beta.0",
+    "@lumino/dragdrop": "^2.0.0-beta.0",
+    "@lumino/keyboard": "^2.0.0-beta.0",
+    "@lumino/messaging": "^2.0.0-beta.0",
+    "@lumino/signaling": "^2.0.0-beta.0",
+    "@lumino/widgets": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
