--- a/packages/default-theme/package.json
+++ b/packages/default-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/default-theme",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Default Theme",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -23,8 +23,8 @@
     "url": "https://github.com/jupyterlab/lumino.git"
   },
   "dependencies": {
-    "@lumino/dragdrop": "^2.0.0-alpha.7",
-    "@lumino/widgets": "^2.0.0-alpha.7"
+    "@lumino/dragdrop": "^2.0.0-beta.0",
+    "@lumino/widgets": "^2.0.0-beta.0"
   },
   "publishConfig": {
     "access": "public"
