--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/messaging",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Message Passing",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -44,8 +44,8 @@
     "displayName": "messaging"
   },
   "dependencies": {
-    "@lumino/algorithm": "^2.0.0-alpha.7",
-    "@lumino/collections": "^2.0.0-alpha.7"
+    "@lumino/algorithm": "^2.0.0-beta.0",
+    "@lumino/collections": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
