--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/polling",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Polling",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -44,9 +44,9 @@
     "displayName": "polling"
   },
   "dependencies": {
-    "@lumino/coreutils": "^2.0.0-alpha.7",
-    "@lumino/disposable": "^2.0.0-alpha.7",
-    "@lumino/signaling": "^2.0.0-alpha.7"
+    "@lumino/coreutils": "^2.0.0-beta.0",
+    "@lumino/disposable": "^2.0.0-beta.0",
+    "@lumino/signaling": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
