--- a/packages/properties/package.json
+++ b/packages/properties/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/properties",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Attached Properties",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
