--- a/packages/signaling/package.json
+++ b/packages/signaling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/signaling",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Signals and Slots",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -44,9 +44,9 @@
     "displayName": "signaling"
   },
   "dependencies": {
-    "@lumino/algorithm": "^2.0.0-alpha.7",
-    "@lumino/coreutils": "^2.0.0-alpha.7",
-    "@lumino/properties": "^2.0.0-alpha.7"
+    "@lumino/algorithm": "^2.0.0-beta.0",
+    "@lumino/coreutils": "^2.0.0-beta.0",
+    "@lumino/properties": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
