--- a/packages/virtualdom/package.json
+++ b/packages/virtualdom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/virtualdom",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-beta.0",
   "description": "Lumino Virtual DOM",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -51,7 +51,7 @@
     "displayName": "virtualdom"
   },
   "dependencies": {
-    "@lumino/algorithm": "^2.0.0-alpha.7"
+    "@lumino/algorithm": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
