Fix some dependencies

--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -46,6 +46,8 @@
     "@lumino/widgets": "^2.0.0-beta.1"
   },
   "devDependencies": {
+    "@lumino/buildutils": "^2.0.0-beta.0",
+    "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "postcss": "^8.4.14",
