--- a/packages/collections/package.json
+++ b/packages/collections/package.json
@@ -47,6 +47,7 @@
     "@lumino/algorithm": "^2.0.0-beta.0"
   },
   "devDependencies": {
+    "@lumino/buildutils": "^2.0.0-beta.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
