Fix API documentation

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,6 +78,7 @@ jobs:
         run: |
           set -eux
           yarn clean
+          yarn build:src
           yarn docs
 
       - name: Publish with Verdaccio
