--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.7.1",
     "shell-quote": "^1.7.2",
-    "typedoc": "~0.23.9",
+    "typedoc": "^0.23.25",
+    "typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
     "typescript": "~4.9.4"
   },
   "jupyter-releaser": {
