--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -91,7 +91,7 @@
     "rollup-plugin-styles": "^4.0.0",
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
-    "typedoc": "~0.23.9",
+    "typedoc": "^0.23.25",
     "typescript": "~4.9.4"
   },
   "publishConfig": {
