--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,7 +88,7 @@ jobs:
           verdaccio --config .github/scripts/verdaccio.yml &
           npm set registry http://localhost:4873/
           yarn config set npmRegistryServer http://localhost:4873/
-          yarn config set unsafeHttpWhitelist --json ["localhost"]
+          yarn config set unsafeHttpWhitelist --json '["localhost"]'
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
           yarn run update:versions patch --yes
