--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -10,10 +10,13 @@
   "repository": "https://github.com/jupyterlab/lumino",
   "author": "Project Jupyter",
   "license": "BSD-3-Clause",
-  "private": true,
   "dependencies": {
+    "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "postcss": "^8.4.14",
+    "rollup": "^3.9.1",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-sourcemaps": "^0.6.3"
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-styles": "^4.0.0"
   }
 }
