--- a/packages/commands/package.json
+++ b/packages/commands/package.json
@@ -60,6 +60,7 @@
     "@lumino/virtualdom": "^2.0.0-beta.0"
   },
   "devDependencies": {
+    "@lumino/buildutils": "^2.0.0-beta.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -81,7 +82,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
-    "typedoc": "~0.23.9",
+    "typedoc": "^0.23.25",
     "typescript": "~4.9.4"
   },
   "publishConfig": {
