--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -51,6 +51,7 @@
     "@lumino/disposable": "^2.0.0-beta.1"
   },
   "devDependencies": {
+    "@lumino/buildutils": "^2.0.0-beta.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -74,7 +75,7 @@
     "rollup-plugin-styles": "^4.0.0",
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
-    "typedoc": "~0.23.9",
+    "typedoc": "^0.23.25",
     "typescript": "~4.9.4"
   },
   "publishConfig": {
