--- a/packages/virtualdom/package.json
+++ b/packages/virtualdom/package.json
@@ -54,6 +54,7 @@
     "@lumino/algorithm": "^2.0.0-beta.0"
   },
   "devDependencies": {
+    "@lumino/buildutils": "^2.0.0-beta.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -75,7 +76,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "terser": "^5.7.1",
     "tslib": "^2.4.0",
-    "typedoc": "~0.23.9",
+    "typedoc": "^0.23.25",
     "typescript": "~4.9.4"
   },
   "publishConfig": {
