--- a/examples/example-datagrid/package.json
+++ b/examples/example-datagrid/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@lumino/example-datagrid",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-rc.0",
   "private": true,
   "scripts": {
     "build": "tsc && rollup -c",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/datagrid": "^2.0.0-beta.1",
-    "@lumino/default-theme": "^2.0.0-beta.1",
-    "@lumino/dragdrop": "^2.0.0-beta.1",
-    "@lumino/widgets": "^2.0.0-beta.1"
+    "@lumino/datagrid": "^2.0.0-rc.0",
+    "@lumino/default-theme": "^2.0.0-rc.0",
+    "@lumino/dragdrop": "^2.0.0-rc.0",
+    "@lumino/widgets": "^2.0.0-rc.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
