--- a/examples/example-dockpanel-iife/package.json
+++ b/examples/example-dockpanel-iife/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/example-dockpanel-iife",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0-rc.0",
   "private": true,
   "scripts": {
     "test": "playwright test"
