--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datagrid",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-rc.0",
   "description": "Lumino Tabular Data Grid",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -35,18 +35,18 @@
     "displayName": "datagrid"
   },
   "dependencies": {
-    "@lumino/algorithm": "^2.0.0-beta.0",
-    "@lumino/coreutils": "^2.0.0-beta.0",
-    "@lumino/disposable": "^2.0.0-beta.1",
-    "@lumino/domutils": "^2.0.0-beta.0",
-    "@lumino/dragdrop": "^2.0.0-beta.1",
-    "@lumino/keyboard": "^2.0.0-beta.0",
-    "@lumino/messaging": "^2.0.0-beta.0",
-    "@lumino/signaling": "^2.0.0-beta.1",
-    "@lumino/widgets": "^2.0.0-beta.1"
+    "@lumino/algorithm": "^2.0.0-rc.0",
+    "@lumino/coreutils": "^2.0.0-rc.0",
+    "@lumino/disposable": "^2.0.0-rc.0",
+    "@lumino/domutils": "^2.0.0-rc.0",
+    "@lumino/dragdrop": "^2.0.0-rc.0",
+    "@lumino/keyboard": "^2.0.0-rc.0",
+    "@lumino/messaging": "^2.0.0-rc.0",
+    "@lumino/signaling": "^2.0.0-rc.0",
+    "@lumino/widgets": "^2.0.0-rc.0"
   },
   "devDependencies": {
-    "@lumino/buildutils": "^2.0.0-beta.0",
+    "@lumino/buildutils": "^2.0.0-rc.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
