--- a/packages/disposable/package.json
+++ b/packages/disposable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/disposable",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-rc.0",
   "description": "Lumino Disposable",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -44,10 +44,10 @@
     "displayName": "disposable"
   },
   "dependencies": {
-    "@lumino/signaling": "^2.0.0-beta.1"
+    "@lumino/signaling": "^2.0.0-rc.0"
   },
   "devDependencies": {
-    "@lumino/buildutils": "^2.0.0-beta.0",
+    "@lumino/buildutils": "^2.0.0-rc.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
