--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/dragdrop",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-rc.0",
   "description": "Lumino Drag and Drop",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -47,11 +47,11 @@
     "displayName": "dragdrop"
   },
   "dependencies": {
-    "@lumino/coreutils": "^2.0.0-beta.0",
-    "@lumino/disposable": "^2.0.0-beta.1"
+    "@lumino/coreutils": "^2.0.0-rc.0",
+    "@lumino/disposable": "^2.0.0-rc.0"
   },
   "devDependencies": {
-    "@lumino/buildutils": "^2.0.0-beta.0",
+    "@lumino/buildutils": "^2.0.0-rc.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
