--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/messaging",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0-rc.0",
   "description": "Lumino Message Passing",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -44,11 +44,11 @@
     "displayName": "messaging"
   },
   "dependencies": {
-    "@lumino/algorithm": "^2.0.0-beta.0",
-    "@lumino/collections": "^2.0.0-beta.0"
+    "@lumino/algorithm": "^2.0.0-rc.0",
+    "@lumino/collections": "^2.0.0-rc.0"
   },
   "devDependencies": {
-    "@lumino/buildutils": "^2.0.0-beta.0",
+    "@lumino/buildutils": "^2.0.0-rc.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
