Update version to 2.0.0 final

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "jupyter-releaser": {
     "options": {
-      "npm-cmd": "npm publish --tag next"
+      "npm-cmd": "npm publish --tag latest"
     },
     "hooks": {
       "after-build-changelog": [
