--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/buildutils",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "Utilities for building Lumino packages",
   "type": "module",
   "main": "src/index.js",
