--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/coreutils",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "Lumino Core Utilities",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -46,7 +46,7 @@
     "displayName": "coreutils"
   },
   "devDependencies": {
-    "@lumino/buildutils": "^2.0.0-rc.1",
+    "@lumino/buildutils": "^2.0.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
