--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/polling",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "Lumino Polling",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -44,12 +44,12 @@
     "displayName": "polling"
   },
   "dependencies": {
-    "@lumino/coreutils": "^2.0.0-rc.1",
-    "@lumino/disposable": "^2.0.0-rc.1",
-    "@lumino/signaling": "^2.0.0-rc.1"
+    "@lumino/coreutils": "^2.0.0",
+    "@lumino/disposable": "^2.0.0",
+    "@lumino/signaling": "^2.0.0"
   },
   "devDependencies": {
-    "@lumino/buildutils": "^2.0.0-rc.1",
+    "@lumino/buildutils": "^2.0.0",
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
