--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/application",
-  "version": "2.2.1",
+  "version": "2.3.0-alpha.0",
   "description": "Lumino Pluggable Application",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -46,7 +46,7 @@
   "dependencies": {
     "@lumino/commands": "^2.1.3",
     "@lumino/coreutils": "^2.1.2",
-    "@lumino/widgets": "^2.3.0"
+    "@lumino/widgets": "^2.3.1-alpha.0"
   },
   "devDependencies": {
     "@lumino/buildutils": "^2.0.1",
