[skip ci] Apply suggestions from code review
Co-authored-by: gabalafou <gabriel@fouasnon.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
             set -eux
             yarn build
-            npx playwright install ${{ matrix.browser }}
+            yarn playwright install ${{ matrix.browser }}
 
       - name: Run Tests
         run: |
